Workaround for Java